color and spacing resume fix

--- a/src/style.css
+++ b/src/style.css
@@ -147,6 +147,7 @@ button:focus {
 
 
   .navbar-nav {
+    margin-top: -1em;
     padding: 4rem 1rem 18rem 1rem !important;
     background-color: rgba(0, 0, 0, 0) !important;
     font-size: 1.1rem !important;
@@ -228,7 +229,7 @@ button:focus {
   .d-flex {
   height: 6rem !important;
   /* width: 5em !important; */
-  margin-left: -10px;
+  /* margin-left: -10px; */
   margin-top: 0.1rem;
   }
 }
@@ -925,6 +926,7 @@ button:focus {
   position: relative !important;
   padding-top: 110px !important;
   padding-bottom: 30px !important;
+  background-size: contain;
   background-image: var(--section-background-color) !important;
   color: white !important;
 }
@@ -965,20 +967,21 @@ button:focus {
   
   .resume {
     padding-top: 30px;
-    padding-right: 50px !important;
-    padding-left: 50px !important;
+    /* padding-right: 50px !important; */
+    /* padding-left: 50px !important; */
     /* padding-bottom: 15px; */
     justify-content: center;
+    align-items: center;
   }
 
   .resume-left {
-    padding-right: 50px !important;
-    padding-left: 50px !important;
+    padding-right: 50% !important;
+    padding-left: 50% !important;
   }
 
   .resume-right {
-    padding-right: 50px !important;
-    padding-left: 50px !important;
+    padding-right: 50% !important;
+    padding-left: 50% !important;
   }
 
   .button-row {
@@ -991,61 +994,12 @@ button:focus {
   padding-bottom: 6rem !important;
 } */
 
-.resume .resume-title {
-  font-size: 2em;
-  font-weight: 700;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.resume .resume-item {
-  padding: 0 0 10px 25px;
-  margin-top: -2px;
-  border-left: 2px solid #9addff;
-  position: relative;
-}
-
-.resume .resume-item .resume-title {
-  line-height: 18px;
-  font-size: 0.9em;
-  background: #5234795d;
-  padding: 8px 15px;
-  display: block;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.resume .resume-item ul {
-  padding-left: 20px;
-  text-align: justify;
-}
-
-.resume .resume-item ul li {
-  padding-bottom: 10px;
-  list-style: none;
-}
-
-.resume .resume-item:last-child {
-  padding-bottom: 0;
-}
-
-.resume .resume-item::before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50px;
-  left: -9px;
-  top: 0;
-  background: #fff;
-  border: 2px solid #8a49a8;
-}
-
-
 .resume-row {
   margin-top: -2rem;
   padding-top: 0px;
   padding-bottom: 0px;
+  align-content: center !important;
+  justify-content: center;
 
 }
 
